# amadeus_minimal_docker

./: .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  Websocket_Node_Doc.md  enter.sh  install.sh  start.sh  stop.sh  test_angular_scale.sh  test_buzzer.sh  test_motor.sh
provisioning/: README.md  install.sh  provisioning_server.py
scripts/: install.sh
src/controller/controller/: mecanum.py  mecanum1.py
src/controller/launch/: controller.launch.py
src/minimal_bringup/: package.xml  setup.py
src/minimal_bringup/config/: servo_config.yaml
src/minimal_bringup/launch/: minimal_motion.launch.py
src/ros_robot_controller/ros_robot_controller/: ros_robot_controller_node.py
src/vision_processor/vision_processor/: __init__.py  detector.py  follower.py
src/web_controller/: package.xml  setup.py
src/web_controller/launch/: web_controller.launch.py
src/web_controller/scripts/: web_api_server
src/web_controller/web_controller/: api_node.py
